--- a/Assets/CSS/Index.css
+++ b/Assets/CSS/Index.css
@@ -75,7 +75,7 @@ body{
 .form-container .form-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 10px;
 }
@@ -90,6 +90,18 @@ body{
   flex: 1;
   padding: 5px;
   border: 1px solid #ccc;
+}
+
+.form-row button{
+	display: inline-block;
+	background-color: #4CAF50;
+	color: white;
+	padding: 10px 20px;
+	text-align: center;
+	font-size: 16px;
+	border-radius: 5px;
+	border: none;
+	cursor: pointer;
 }
 
 /*Vi tri*/
